--- a/child-study/package.json
+++ b/child-study/package.json
@@ -21,6 +21,8 @@
     "@vitejs/plugin-vue": "^4.5.2",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.10"
   }
 }
