--- a/child-study/package.json
+++ b/child-study/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.7",
-    "core-js": "^3.8.3",
     "element-plus": "^2.4.4",
     "vue": "^3.3.11",
-    "vue-i18n": "^9.9.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "core-js": "^3.8.3",
+    "vite-plugin-cdn-import": "^0.3.5",
     "@vitejs/plugin-vue": "^4.5.2",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
